change titles & header imgs
Signed-off-by: dmohamedTayait <shaden26_8@hotmail.com>

--- a/TayaIT.Enterprise.NeyabatDemo/Site.master
+++ b/TayaIT.Enterprise.NeyabatDemo/Site.master
@@ -29,6 +29,7 @@
         <header id="header">
       <nav id="mainnavigation" class="container_24">
        <ul id="mainnavigationlist">
+       <div class="appLogo"></div>
         </ul>
             <div class="clear"></div>
       </nav>
