--- a/TayaIT.Enterprise.NeyabatDemo/Styles/style.css
+++ b/TayaIT.Enterprise.NeyabatDemo/Styles/style.css
@@ -292,20 +292,18 @@ header#header a.currentuser {
     z-index: 12;
 }
 #mainnavigation .appLogo {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    width: 110px;
-    height: 110px;
-    background-image: url(../images/app-logo.png);
+   
+    height: 220px;
+    background-image: url(../images/banner.png) ;
+    background-position:center;
     background-repeat: no-repeat;
     z-index: 12;
 }
 #mainnavigationlist {
-    background: url(../images/header.jpg) no-repeat center center;
-    background-color: #000;
+    background: url(../images/repeated.png) no-repeat center center;
+    background-color: #9ab5bc;
     position: relative;
-    height: 141px;
+    background-repeat: repeat;
 }
 #mainnavigationlist li {
     padding: 15px 160px 0px 30px;
@@ -935,10 +933,11 @@ span.revFilelock {
 }
 /* footer */
 #footer {
-    background-image: url(../images/footer_bg.gif);
-    background-repeat: repeat-x;
+    background-image: url(../images/repeated.png);
+    background-repeat: repeat;
+    height:10px;
     background-position: center top;
-    background-color: #6a95c8;
+    background-color: #82a3a7;
     padding: 30px 0px;
     color: #FFFFFF;
     clear: both;
